--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   build_runner: ^2.1.7
   mobx_codegen: ^2.0.3
   json_serializable: ^6.1.5
+  mockito: ^5.0.16
   flutter_test:
     sdk: flutter
   
